--- a/src/components/StatusIndicatorTable/StatusIndicator.module.scss
+++ b/src/components/StatusIndicatorTable/StatusIndicator.module.scss
@@ -50,7 +50,6 @@
   height: 1px;
   overflow: hidden;
   width: 100%;
-  table-layout: fixed;
 }
 
 .table .cell,
@@ -95,5 +94,32 @@
   }
   .iconGroup.isDark {
     display: none;
+  }
+}
+
+//Needed for Safari
+.statusIndicatorTableWrapper {
+  @include carbon--breakpoint('md') {
+    :global(.bx--col-md-1) {
+      width: 12.5%;
+    }
+
+    :global(.bx--col-md-2) {
+      width: 25%;
+    }
+
+    :global(.bx--col-md-3) {
+      width: 37.5%;
+    }
+  }
+
+  @include carbon--breakpoint('lg') {
+    :global(.bx--col-lg-4) {
+      width: 33.333333%;
+    }
+
+    :global(.bx--col-lg-2) {
+      width: 16.66667%;
+    }
   }
 }
