--- a/src/components/TypesetStyle/typeset-example.scss
+++ b/src/components/TypesetStyle/typeset-example.scss
@@ -48,9 +48,10 @@
 }
 
 .bx--typeset-example-specs {
-  padding: $spacing-05 $spacing-06;
+  padding: $spacing-05;
 
   @include carbon--breakpoint('md') {
+    padding: $spacing-05 $spacing-06;
     width: 33.3%;
     border-left: 1px solid $carbon--gray-20;
   }
