fix: grid alignment on typography page (#2746)
* fix: grid alignment on typography page

* fix: update padding

--- a/src/components/TypesetStyle/typeset-example.scss
+++ b/src/components/TypesetStyle/typeset-example.scss
@@ -48,7 +48,7 @@
 }
 
 .bx--typeset-example-specs {
-  padding: $spacing-05 $spacing-06;
+  padding: $spacing-05;
 
   @include carbon--breakpoint('md') {
     width: 33.3%;
