chore(wip): reconfigure theme usage for v11

--- a/src/components/ComponentDemo/ComponentDemo.module.scss
+++ b/src/components/ComponentDemo/ComponentDemo.module.scss
@@ -316,7 +316,7 @@ body[data-live-preview-theme='White']
   [class^='flatpickr-calendar'][class*='open'],
 body[data-live-preview-theme='White'] ul[class^='bx--overflow-menu-options'],
 .white {
-  @include theme($white);
+  @include theme(themes.$white);
 }
 
 body[data-live-preview-theme='Gray 10'] [class^='bx--tooltip'],
@@ -324,7 +324,7 @@ body[data-live-preview-theme='Gray 10']
   [class^='flatpickr-calendar'][class*='open'],
 body[data-live-preview-theme='Gray 10'] ul[class^='bx--overflow-menu-options'],
 .g10 {
-  @include theme($g10);
+  @include theme(themes.$g10);
 }
 
 body[data-live-preview-theme='Gray 90'] [class^='bx--tooltip'],
@@ -332,7 +332,7 @@ body[data-live-preview-theme='Gray 90']
   [class^='flatpickr-calendar'][class*='open'],
 body[data-live-preview-theme='Gray 90'] ul[class^='bx--overflow-menu-options'],
 .g90 {
-  @include theme($g90);
+  @include theme(themes.$g90);
 }
 
 body[data-live-preview-theme='Gray 100'] [class^='bx--tooltip'],
@@ -340,7 +340,7 @@ body[data-live-preview-theme='Gray 100']
   [class^='flatpickr-calendar'][class*='open'],
 body[data-live-preview-theme='Gray 100'] ul[class^='bx--overflow-menu-options'],
 .g100 {
-  @include theme($g100);
+  @include theme(themes.$g100);
 }
 
 //---------------------------------------
