fix(styles): rename tokens for v11

--- a/src/components/GlossaryComponent/GlossaryNav/glossary-nav.scss
+++ b/src/components/GlossaryComponent/GlossaryNav/glossary-nav.scss
@@ -23,7 +23,7 @@
   list-style-type: none !important;
   padding: 0;
   width: 100%;
-  transition: all $transition--base;
+  transition: all $transition-base;
   display: block;
 }
 
