--- a/src/components/TypesetStyle/typeset-style.scss
+++ b/src/components/TypesetStyle/typeset-style.scss
@@ -367,7 +367,7 @@ $prefix: 'bx';
   z-index: 5;
   top: 0;
   transition-property: top;
-  transition-duration: $transition--expansion;
+  transition-duration: $transition-expansion;
   transition-timing-function: $standard-easing;
   margin-left: -$spacing-03;
   margin-right: -$spacing-03;
