--- a/src/components/ComponentOverview/component-overview.scss
+++ b/src/components/ComponentOverview/component-overview.scss
@@ -15,7 +15,7 @@ $hover-ui: #e5e5e5;
   width: 33%;
   background: $white-0;
   position: relative;
-  transition: $transition--base;
+  transition: $transition-base;
 
   &:hover {
     background: $hover-ui;
