--- a/src/components/OverviewCard/overview-card.scss
+++ b/src/components/OverviewCard/overview-card.scss
@@ -8,7 +8,7 @@
   position: relative;
   text-decoration: none;
   background: $white-0;
-  transition: background $transition--base;
+  transition: background $transition-base;
   display: flex;
   justify-content: space-between;
 
