fix(tokens): v11 renames and usage fixes

--- a/src/components/ColorPalette/ColorPalette.module.scss
+++ b/src/components/ColorPalette/ColorPalette.module.scss
@@ -37,15 +37,15 @@
   border-bottom: 2px solid $icon-02; // you can't see it if it's 1px
 }
 
-.group-controls :global(.bx--dropdown__wrapper) {
+.group-controls :global(.cds--dropdown__wrapper) {
   box-shadow: -2px 0px 0px 0px $ui-03; // adds left divider
 }
 
-.group-controls.dark-controls :global(.bx--dropdown__wrapper) {
+.group-controls.dark-controls :global(.cds--dropdown__wrapper) {
   box-shadow: -2px 0px 0px 0px solid $icon-02;
 }
 
-.palette-controls :global(.bx--dropdown) {
+.palette-controls :global(.cds--dropdown) {
   border-bottom: none; //removes carbon border
 }
 
@@ -55,32 +55,32 @@
   border-bottom: 1px solid $ui-03;
 }
 
-.palette-switcher :global(.bx--content-switcher-btn) {
+.palette-switcher :global(.cds--content-switcher-btn) {
   border-radius: 0;
   color: $text-01;
 }
 
-.palette-switcher :global(.bx--content-switcher--selected) {
+.palette-switcher :global(.cds--content-switcher--selected) {
   color: $text-04;
 }
 
-.palette-switcher :global(.bx--content-switcher-btn:focus) {
+.palette-switcher :global(.cds--content-switcher-btn:focus) {
   outline: 1px solid $inverse-focus-ui;
   box-shadow: none;
   outline-offset: -4px;
 }
 
-.palette-switcher :global(.bx--content-switcher-btn) {
+.palette-switcher :global(.cds--content-switcher-btn) {
   border-radius: 0;
 }
 
 .palette-switcher
-  :global(.bx--content-switcher-btn:not(.bx--content-switcher--selected)) {
+  :global(.cds--content-switcher-btn:not(.cds--content-switcher--selected)) {
   background-color: $inverse-01;
 }
 
 .palette-switcher
-  :global(.bx--content-switcher-btn:not(.bx--content-switcher--selected):hover) {
+  :global(.cds--content-switcher-btn:not(.cds--content-switcher--selected):hover) {
   background-color: $hover-ui;
 }
 
