--- a/src/components/ColorTokenTable/color-token-table.scss
+++ b/src/components/ColorTokenTable/color-token-table.scss
@@ -11,7 +11,7 @@
   position: relative;
   width: 100%;
   height: 3rem;
-  background: $ui-01;
+  background: $layer-01;
 
   @include breakpoint-down('lg') {
     margin-left: 0;
@@ -38,8 +38,8 @@
 }
 
 .color-token-table__theme-switcher
-  .bx--content-switcher-btn:not(.bx--content-switcher--selected) {
-  background-color: $ui-01;
+  .cds--content-switcher-btn:not(.cds--content-switcher--selected) {
+  background-color: $layer-01;
   color: $text-01;
 
   &:hover {
@@ -47,7 +47,7 @@
   }
 }
 
-.color-token-table__theme-switcher .bx--content-switcher-btn {
+.color-token-table__theme-switcher .cds--content-switcher-btn {
   padding: $spacing-03 $spacing-07 $spacing-03 $spacing-05;
   flex: 1;
   border-radius: 0;
@@ -63,7 +63,7 @@
 }
 
 .color-token-table__theme-switcher
-  .bx--content-switcher-btn:not(:last-of-type)::after {
+  .cds--content-switcher-btn:not(:last-of-type)::after {
   height: 24px;
   right: -1px;
   top: 12px;
@@ -74,17 +74,17 @@
   justify-content: space-between;
 }
 
-.color-token-value .bx--overflow-menu {
+.color-token-value .cds--overflow-menu {
   margin-left: $spacing-03;
   margin-top: -$spacing-03;
 }
 
-.color-token-value .bx--overflow-menu-options {
+.color-token-value .cds--overflow-menu-options {
   left: -9.25rem;
   top: $spacing-07;
 }
 
-.color-token-value .bx--overflow-menu__icon {
+.color-token-value .cds--overflow-menu__icon {
   width: rem(16px);
   height: rem(16px);
 }
@@ -119,7 +119,7 @@
 }
 
 .color-token-table .page-table {
-  background: $ui-01;
+  background: $layer-01;
   margin-top: $spacing-03;
   width: calc(100%);
 }
