--- a/src/components/ComponentDemo/ComponentDemo.module.scss
+++ b/src/components/ComponentDemo/ComponentDemo.module.scss
@@ -157,7 +157,7 @@
   --space: 0;
   grid-area: knobs;
   overflow-y: auto;
-  background-color: $ui-01;
+  background-color: $layer-01;
   border-left: 1px solid $ui-03;
   position: absolute;
   right: 0;
@@ -278,7 +278,7 @@ fieldset.form-group:last-of-type {
   grid-area: preview;
   overflow: auto;
   padding: $spacing-05;
-  border: $spacing-03 solid $ui-01;
+  border: $spacing-03 solid $layer-01;
   background-color: var(--cds-ui-background);
   width: 100%;
   display: flex;
@@ -294,7 +294,7 @@ fieldset.form-group:last-of-type {
   align-items: center;
 }
 
-.preview-container :global .bx--snippet {
+.preview-container :global .cds--snippet {
   justify-content: normal;
 }
 
@@ -311,34 +311,35 @@ fieldset.form-group:last-of-type {
 }
 
 // Themes
-body[data-live-preview-theme='White'] [class^='bx--tooltip'],
+body[data-live-preview-theme='White'] [class^='cds--tooltip'],
 body[data-live-preview-theme='White']
   [class^='flatpickr-calendar'][class*='open'],
-body[data-live-preview-theme='White'] ul[class^='bx--overflow-menu-options'],
+body[data-live-preview-theme='White'] ul[class^='cds--overflow-menu-options'],
 .white {
   @include theme(themes.$white);
 }
 
-body[data-live-preview-theme='Gray 10'] [class^='bx--tooltip'],
+body[data-live-preview-theme='Gray 10'] [class^='cds--tooltip'],
 body[data-live-preview-theme='Gray 10']
   [class^='flatpickr-calendar'][class*='open'],
-body[data-live-preview-theme='Gray 10'] ul[class^='bx--overflow-menu-options'],
+body[data-live-preview-theme='Gray 10'] ul[class^='cds--overflow-menu-options'],
 .g10 {
   @include theme(themes.$g10);
 }
 
-body[data-live-preview-theme='Gray 90'] [class^='bx--tooltip'],
+body[data-live-preview-theme='Gray 90'] [class^='cds--tooltip'],
 body[data-live-preview-theme='Gray 90']
   [class^='flatpickr-calendar'][class*='open'],
-body[data-live-preview-theme='Gray 90'] ul[class^='bx--overflow-menu-options'],
+body[data-live-preview-theme='Gray 90'] ul[class^='cds--overflow-menu-options'],
 .g90 {
   @include theme(themes.$g90);
 }
 
-body[data-live-preview-theme='Gray 100'] [class^='bx--tooltip'],
+body[data-live-preview-theme='Gray 100'] [class^='cds--tooltip'],
 body[data-live-preview-theme='Gray 100']
   [class^='flatpickr-calendar'][class*='open'],
-body[data-live-preview-theme='Gray 100'] ul[class^='bx--overflow-menu-options'],
+body[data-live-preview-theme='Gray 100']
+  ul[class^='cds--overflow-menu-options'],
 .g100 {
   @include theme(themes.$g100);
 }
@@ -369,7 +370,7 @@ body[data-live-preview-theme='Gray 100'] ul[class^='bx--overflow-menu-options'],
 
   [class*='--snippet--multi'],
   [class*='--snippet--single'] {
-    background: var(--cds-ui-01, #f4f4f4);
+    background: var(--cds-layer-01, #f4f4f4);
     color: var(--cds-text-01, #161616);
   }
 
@@ -380,9 +381,9 @@ body[data-live-preview-theme='Gray 100'] ul[class^='bx--overflow-menu-options'],
   }
 
   [class*='--data-table--zebra'] tbody tr:nth-child(odd) td {
-    background-color: var(--cds-ui-01, #f4f4f4);
-    border-bottom: var(--cds-ui-01, #f4f4f4);
-    border-top: var(--cds-ui-01, #f4f4f4);
+    background-color: var(--cds-layer-01, #f4f4f4);
+    border-bottom: var(--cds-layer-01, #f4f4f4);
+    border-top: var(--cds-layer-01, #f4f4f4);
   }
 
   [class*='--content-switcher-btn'] {
@@ -402,13 +403,13 @@ body[data-live-preview-theme='Gray 100'] ul[class^='bx--overflow-menu-options'],
   }
 
   [class*='--overflow-menu'][class*='--overflow-menu--open'] {
-    background-color: var(--cds-ui-01, #f4f4f4);
+    background-color: var(--cds-layer-01, #f4f4f4);
   }
 
   [class*='--search--sm'],
   [class*='--search--lg'],
   [class*='--search--xl'],
-  .bx--select {
+  .cds--select {
     width: 50%;
   }
 
@@ -418,19 +419,19 @@ body[data-live-preview-theme='Gray 100'] ul[class^='bx--overflow-menu-options'],
 }
 
 body {
-  [class$='bx--tooltip'] {
+  [class$='cds--tooltip'] {
     background-color: var(--cds-inverse-02, #393939);
   }
 
   .flatpickr-calendar.open {
-    background-color: var(--cds-ui-01, #ffffff);
+    background-color: var(--cds-layer-01, #ffffff);
   }
 
   [class*='--overflow-menu-options'][class*='--overflow-menu-options--open'] {
-    background-color: var(--cds-ui-01, #f4f4f4);
+    background-color: var(--cds-layer-01, #f4f4f4);
 
     &::after {
-      background-color: var(--cds-ui-01, #f4f4f4);
+      background-color: var(--cds-layer-01, #f4f4f4);
     }
   }
 
