--- a/src/components/ComponentIndexPage/component-index.scss
+++ b/src/components/ComponentIndexPage/component-index.scss
@@ -7,7 +7,7 @@
 //----------------------------------------------------------------------------
 // Component Index Container
 //----------------------------------------------------------------------------
-.component-index-container .bx--no-gutter--start {
+.component-index-container .cds--no-gutter--start {
   width: 100%;
 }
 
@@ -18,7 +18,7 @@
   margin-top: 5rem;
 }
 
-.component-index-search .bx--search-input {
+.component-index-search .cds--search-input {
   border-bottom: 1px solid $ui-03;
   height: 2.5rem;
 }
@@ -35,7 +35,7 @@
   padding-left: 1rem;
 }
 
-.component-index-sort .bx--list-box__field {
+.component-index-sort .cds--list-box__field {
   background-color: $white-0;
   padding-left: 0.5rem;
   height: 2.5rem;
