--- a/src/components/ComponentStatus/component-status.scss
+++ b/src/components/ComponentStatus/component-status.scss
@@ -1,7 +1,7 @@
 .component-status {
   overflow-x: auto;
 }
-.component-status .bx--tag {
+.component-status .cds--tag {
   white-space: nowrap;
 }
 
