--- a/src/components/GlossaryComponent/GlossaryNav/glossary-nav.scss
+++ b/src/components/GlossaryComponent/GlossaryNav/glossary-nav.scss
@@ -19,7 +19,7 @@
   }
 }
 
-.glossary .bx--list__item {
+.glossary .cds--list__item {
   list-style-type: none !important;
   padding: 0;
   width: 100%;
@@ -27,7 +27,7 @@
   display: block;
 }
 
-.glossary .bx--list__item a {
+.glossary .cds--list__item a {
   @include type-style('body-short-02');
   width: rem(24px);
   height: rem(24px);
@@ -38,12 +38,12 @@
   color: $text-02;
 }
 
-.glossary .bx--list__item:hover a {
+.glossary .cds--list__item:hover a {
   color: $text-01;
   background: $hover-ui;
 }
 
-.glossary .bx--list__item.glossary-nav__item--active a {
+.glossary .cds--list__item.glossary-nav__item--active a {
   color: $text-01;
   background: $ui-03;
 }
