--- a/src/components/ListSection/ListSection.module.scss
+++ b/src/components/ListSection/ListSection.module.scss
@@ -20,7 +20,7 @@
 }
 
 // Principles/Layout page
-.list-section [class*='#{$prefix}--col'] {
+.list-section [class*='cds--col'] {
   margin-bottom: 1.5rem;
   @include breakpoint('md') {
     margin-bottom: 0;
