--- a/src/components/OverviewCard/overview-card-group.scss
+++ b/src/components/OverviewCard/overview-card-group.scss
@@ -4,7 +4,7 @@
   }
 }
 
-.overview-card-group .#{$prefix}--no-gutter-sm {
+.overview-card-group .cds--no-gutter-sm {
   --space: 0;
 }
 
@@ -15,46 +15,46 @@
 }
 
 //always and forever, the first item has no left border
-.overview-card-group .#{$prefix}--col-lg-4:first-child .overview-card {
+.overview-card-group .cds--col-lg-4:first-child .overview-card {
   border-left: 1px solid transparent;
 }
 
 @include breakpoint-down('lg') {
-  .overview-card-group .#{$prefix}--col-lg-4:nth-child(even) .overview-card {
+  .overview-card-group .cds--col-lg-4:nth-child(even) .overview-card {
     border-left: 1px solid $gray-20;
   }
 
   //selects every item after the first 2
-  .overview-card-group .#{$prefix}--col-lg-4:nth-child(n + 3) .overview-card {
+  .overview-card-group .cds--col-lg-4:nth-child(n + 3) .overview-card {
     border-top: 1px solid $gray-20;
   }
 }
 
 @include breakpoint-between('lg', 'xlg') {
   //selects every item after the first 3
-  .overview-card-group .#{$prefix}--col-lg-4:nth-child(n + 4) .overview-card {
+  .overview-card-group .cds--col-lg-4:nth-child(n + 4) .overview-card {
     border-top: 1px solid $gray-20;
   }
 
   //selects every third item starting at the second item (4, 7, 10, 13, 16...)
-  .overview-card-group .#{$prefix}--col-lg-4:nth-child(3n + 4) .overview-card {
+  .overview-card-group .cds--col-lg-4:nth-child(3n + 4) .overview-card {
     border-left: 1px solid transparent;
   }
 }
 
 @include breakpoint('xlg') {
-  .overview-card-group .bx--col-max-3 {
+  .overview-card-group .cds--col-max-3 {
     flex: 0 0 25%;
     width: 25%;
   }
 
   //selects every fourth item starting at the second item
-  .overview-card-group .#{$prefix}--col-lg-4:nth-child(3n + 5) .overview-card {
+  .overview-card-group .cds--col-lg-4:nth-child(3n + 5) .overview-card {
     border-left: 1px solid transparent;
   }
 
   //selects every item after the first 4
-  .overview-card-group .#{$prefix}--col-lg-4:nth-child(n + 5) .overview-card {
+  .overview-card-group .cds--col-lg-4:nth-child(n + 5) .overview-card {
     border-top: 1px solid $gray-20;
   }
 }
