--- a/src/components/OverviewCard/overview-card.scss
+++ b/src/components/OverviewCard/overview-card.scss
@@ -2,7 +2,7 @@
   position: relative;
 }
 
-.overview-card .#{$prefix}--tile {
+.overview-card .cds--tile {
   height: 100%;
   padding: $spacing-05;
   position: relative;
@@ -36,7 +36,7 @@
   z-index: 1;
 }
 
-.overview-card .bx--tag {
+.overview-card .cds--tag {
   margin-top: -0.25rem;
   white-space: nowrap;
 }
@@ -63,12 +63,12 @@
   background: transparent;
 }
 
-.overview-card .#{$prefix}--tile:hover .overview-card__img:after {
+.overview-card .cds--tile:hover .overview-card__img:after {
   opacity: 1;
 }
 
 // Disabled
-.overview-card--disabled .#{$prefix}--tile:hover {
+.overview-card--disabled .cds--tile:hover {
   background: $white-0;
   cursor: not-allowed;
 }
