--- a/src/components/StatusIndicatorTable/StatusIndicator.module.scss
+++ b/src/components/StatusIndicatorTable/StatusIndicator.module.scss
@@ -100,25 +100,25 @@
 //Needed for Safari
 .statusIndicatorTableWrapper {
   @include breakpoint('md') {
-    :global(.bx--col-md-1) {
+    :global(.cds--col-md-1) {
       width: 12.5%;
     }
 
-    :global(.bx--col-md-2) {
+    :global(.cds--col-md-2) {
       width: 25%;
     }
 
-    :global(.bx--col-md-3) {
+    :global(.cds--col-md-3) {
       width: 37.5%;
     }
   }
 
   @include breakpoint('lg') {
-    :global(.bx--col-lg-4) {
+    :global(.cds--col-lg-4) {
       width: 33.333333%;
     }
 
-    :global(.bx--col-lg-2) {
+    :global(.cds--col-lg-2) {
       width: 16.66667%;
     }
   }
