--- a/src/components/TypesetStyle/typeset-style.scss
+++ b/src/components/TypesetStyle/typeset-style.scss
@@ -1,7 +1,7 @@
 $prefix: 'bx';
 
 // Typeset Style
-.#{$prefix}--typeset-style-container {
+.cds--typeset-style-container {
   position: relative;
   padding: 0 $spacing-03;
   margin-bottom: $spacing-09;
@@ -17,7 +17,7 @@ $prefix: 'bx';
   }
 }
 
-.#{$prefix}--typeset-style-container .page-h4 {
+.cds--typeset-style-container .page-h4 {
   margin-top: $spacing-09;
   display: inline-block;
 
@@ -30,7 +30,7 @@ $prefix: 'bx';
   }
 }
 
-.#{$prefix}--typeset-style-button {
+.cds--typeset-style-button {
   background-color: transparent;
   border: none;
   border-radius: 0;
@@ -60,7 +60,7 @@ $prefix: 'bx';
   }
 }
 
-.#{$prefix}--typeset-style-controls {
+.cds--typeset-style-controls {
   height: 100%;
   left: 0;
   position: absolute !important;
@@ -73,7 +73,7 @@ $prefix: 'bx';
   }
 }
 
-.#{$prefix}--typeset-style-controls-sticky {
+.cds--typeset-style-controls-sticky {
   align-items: center;
   background-color: $white-0;
   width: auto;
@@ -81,7 +81,7 @@ $prefix: 'bx';
   box-sizing: content-box;
 }
 
-.#{$prefix}--typeset-style-controls-sticky-stuck {
+.cds--typeset-style-controls-sticky-stuck {
   box-shadow: 0px 2px 6px 0px rgba($black-100, 0.2);
 
   &:before,
@@ -106,12 +106,12 @@ $prefix: 'bx';
   }
 }
 
-.#{$prefix}--typeset-style-nav-shiv {
+.cds--typeset-style-nav-shiv {
   width: 100%;
   height: 1rem;
 }
 
-.#{$prefix}--typeset-style-breakpoint-controls {
+.cds--typeset-style-breakpoint-controls {
   height: 3rem;
   align-items: center;
   display: flex;
@@ -130,12 +130,12 @@ $prefix: 'bx';
   }
 }
 
-.#{$prefix}--typeset-style-screen-width-label {
+.cds--typeset-style-screen-width-label {
   padding-right: $spacing-05;
   display: inline-block;
 }
 
-.#{$prefix}--typeset-style-screen-controls {
+.cds--typeset-style-screen-controls {
   align-items: center;
   height: 3rem;
   border-top: 1px solid $gray-20;
@@ -158,7 +158,7 @@ $prefix: 'bx';
   }
 }
 
-.#{$prefix}--typeset-style-screen-label {
+.cds--typeset-style-screen-label {
   height: auto;
   margin-bottom: 0;
   // Need to set the width explicitly to make sure the slider
@@ -167,18 +167,18 @@ $prefix: 'bx';
   text-align: right;
 }
 
-.#{$prefix}--typeset-style-input {
+.cds--typeset-style-input {
   margin: 0;
   margin-right: rem(20px);
   width: 100%;
 }
 
-.#{$prefix}--typeset-style-toggle-container {
+.cds--typeset-style-toggle-container {
   position: relative;
   z-index: 1;
 }
 
-.#{$prefix}--typeset-style-toggle-button {
+.cds--typeset-style-toggle-button {
   background-color: $white-0;
   box-shadow: inset 0 -1px 0 0 $gray-20;
   color: $gray-100;
@@ -207,12 +207,12 @@ $prefix: 'bx';
   }
 }
 
-.#{$prefix}--typeset-style-button-controls-container {
+.cds--typeset-style-button-controls-container {
   height: 100%;
   margin-left: auto;
 }
 
-.#{$prefix}--typeset-style-breakpoints-container {
+.cds--typeset-style-breakpoints-container {
   position: relative;
   margin-top: $spacing-05;
 
@@ -221,17 +221,17 @@ $prefix: 'bx';
   }
 }
 
-.#{$prefix}--typeset-style-section-spacer {
+.cds--typeset-style-section-spacer {
   margin-bottom: calc(1rem + 1px);
 }
 
-.#{$prefix}--typeset-style-title-shiv {
+.cds--typeset-style-title-shiv {
   padding-top: $spacing-09;
   background-color: $gray-10;
   position: relative;
 }
 
-.#{$prefix}--typeset-style-group-title-container {
+.cds--typeset-style-group-title-container {
   background-color: $white-0;
   height: 3rem;
   padding: $spacing-05;
@@ -241,7 +241,7 @@ $prefix: 'bx';
   align-content: center;
 }
 
-.#{$prefix}--typeset-style-group-title {
+.cds--typeset-style-group-title {
   margin: 0;
   padding: 0;
 }
@@ -249,7 +249,7 @@ $prefix: 'bx';
 // ------------------------------------------------------
 // Input Range
 // ------------------------------------------------------
-.#{$prefix}--input-range {
+.cds--input-range {
   appearance: none;
   font-size: 0px;
   position: relative;
@@ -362,7 +362,7 @@ $prefix: 'bx';
 // ------------------------------------------------------
 // Sticky Container
 // ------------------------------------------------------
-.#{$prefix}--sticky-container {
+.cds--sticky-container {
   position: sticky;
   z-index: 5;
   top: 0;
@@ -381,36 +381,36 @@ $prefix: 'bx';
 div[class*='PageHeader-module--page-header--shifted']
   + div
   > div
-  > .#{$prefix}--sticky-container-visible {
+  > .cds--sticky-container-visible {
   top: 3rem;
 }
 
-.#{$prefix}--sticky-container-visible {
+.cds--sticky-container-visible {
   top: 6rem;
 }
 
-.#{$prefix}--sticky-container-hidden {
-  &.#{$prefix}--sticky-container-banner {
+.cds--sticky-container-hidden {
+  &.cds--sticky-container-banner {
     top: 2.5rem;
   }
 }
 
-.#{$prefix}--sticky-container-secondary {
+.cds--sticky-container-secondary {
   z-index: 4;
 }
 
-.#{$prefix}--sticky-container-secondary-hidden {
+.cds--sticky-container-secondary-hidden {
   top: 3rem;
 
-  &.#{$prefix}--sticky-container-banner {
+  &.cds--sticky-container-banner {
     top: 5.5rem;
   }
 }
 
-.#{$prefix}--sticky-container-secondary-visible {
+.cds--sticky-container-secondary-visible {
   top: 6rem;
 
-  &.#{$prefix}--sticky-container-banner {
+  &.cds--sticky-container-banner {
     top: 8.5rem;
   }
 }
