--- a/src/styles/_grid-demo.scss
+++ b/src/styles/_grid-demo.scss
@@ -1,3 +1,10 @@
+@use '@carbon/react/scss/grid' as *;
+@use '@carbon/react/scss/breakpoint' as *;
+@use '@carbon/react/scss/compat/theme' as *;
+@use '@carbon/react/scss/colors' as *;
+@use '@carbon/react/scss/spacing' as *;
+@use '@carbon/react/scss/type' as *;
+
 //---------------------------------------
 // Set 16 column grid for examples only
 //---------------------------------------
@@ -6,8 +13,10 @@
   $feature-flags: (
     grid-columns-16: true,
   );
-  @import '~carbon-components/scss/globals/grid/grid';
-  @import '~carbon-components/scss/globals/scss/layout';
+
+  @include flex-grid();
+  // @import '~carbon-components/scss/globals/grid/grid';
+  // @import '~carbon-components/scss/globals/scss/layout';
 }
 
 .bx-demo-sm {
@@ -58,7 +67,7 @@
 //---------------------------------------
 
 .grid-demo {
-  background: $ui-01;
+  background: $layer-01;
   padding: $spacing-05 0;
   display: flex;
   position: relative;
@@ -218,7 +227,7 @@
 //---------------------------------------
 // Grid modes section
 //---------------------------------------
-.grid-modes .bx--col-lg-2 {
+.grid-modes .cds--col-lg-2 {
   padding-top: $spacing-04;
 }
 
