--- a/src/styles/_homepage.scss
+++ b/src/styles/_homepage.scss
@@ -34,8 +34,8 @@
   }
 }
 
-.homepage--header .bx--grid,
-.homepage--header .bx--row {
+.homepage--header .cds--grid,
+.homepage--header .cds--row {
   height: 100%;
 }
 
@@ -56,7 +56,7 @@
     margin-top: 0;
   }
 
-  .bx--aspect-ratio--2x1::before {
+  .cds--aspect-ratio--2x1::before {
     padding-top: 100%;
 
     @include breakpoint('md') {
@@ -65,7 +65,7 @@
   }
 }
 
-.homepage--tile-header .bx--resource-card {
+.homepage--tile-header .cds--resource-card {
   width: 100%;
 }
 
@@ -74,14 +74,14 @@
 }
 
 // OVERRIDES
-.resource-card-group .bx--resource-card--dark {
+.resource-card-group .cds--resource-card--dark {
   border-color: #000;
 }
 
-.resource-card-group .bx--col-lg-4:nth-child(even) .bx--resource-card--dark {
+.resource-card-group .cds--col-lg-4:nth-child(even) .cds--resource-card--dark {
   border-left-color: #000;
 }
 
-.bx--side-nav__overlay-active {
+.cds--side-nav__overlay-active {
   width: 100%;
 }
