--- a/src/styles/meetups.scss
+++ b/src/styles/meetups.scss
@@ -1,8 +1,11 @@
+@use '@carbon/react/scss/compat/theme' as *;
+@use '@carbon/react/scss/spacing' as *;
+
 //---------------------------------------
 // meetups page
 //---------------------------------------
 .meetups-list {
-  padding-top: $layout-05;
+  padding-top: $spacing-10;
 }
 
 .meetups-list:before {
