--- a/src/components/ColorBlock/color-block.scss
+++ b/src/components/ColorBlock/color-block.scss
@@ -32,17 +32,17 @@
 
 // Color blocks
 
-.color-blocks .bx--caption {
+.color-blocks .cds--caption {
   font-size: 14px;
   margin-left: $spacing-05;
 }
 
-.color-blocks .bx--col-lg-2 {
+.color-blocks .cds--col-lg-2 {
   padding-right: 0;
   padding-left: 0;
 }
 
-.color-blocks .bx--col-lg-2:nth-child(1) {
+.color-blocks .cds--col-lg-2:nth-child(1) {
   min-width: 50%;
 
   @include breakpoint('md') {
@@ -50,7 +50,7 @@
   }
 }
 
-.color-blocks .bx--col-lg-2:nth-child(2) {
+.color-blocks .cds--col-lg-2:nth-child(2) {
   min-width: 50%;
 
   @include breakpoint('md') {
@@ -59,7 +59,7 @@
   }
 }
 
-.color-blocks .bx--col-lg-2:nth-child(3) {
+.color-blocks .cds--col-lg-2:nth-child(3) {
   min-width: 50%;
 
   @include breakpoint('md') {
@@ -68,7 +68,7 @@
   }
 }
 
-.color-blocks .bx--col-lg-2:nth-child(4) {
+.color-blocks .cds--col-lg-2:nth-child(4) {
   min-width: 50%;
 
   @include breakpoint('md') {
