--- a/src/components/ComponentDemo/Code/Code.module.scss
+++ b/src/components/ComponentDemo/Code/Code.module.scss
@@ -19,7 +19,7 @@
 }
 
 // feedback tooltip adjustments
-.container :global(.bx--btn--copy__feedback) {
+.container :global(.cds--btn--copy__feedback) {
   position: absolute;
   &::before {
     left: $spacing-07;
@@ -115,7 +115,7 @@
   }
 }
 
-.copy-button:global(.bx--copy-btn--animating) span {
+.copy-button:global(.cds--copy-btn--animating) span {
   display: inline-block;
   left: -$spacing-03;
 }
