--- a/src/components/SVGLibraries/shared/SvgLibrary.module.scss
+++ b/src/components/SVGLibraries/shared/SvgLibrary.module.scss
@@ -25,7 +25,7 @@
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
 }
 
-.filter-row :global(.bx--search) {
+.filter-row :global(.cds--search) {
   @include breakpoint('md') {
     width: calc(50% + 1px);
     border-right: 1px solid $ui-03;
@@ -36,7 +36,7 @@
   }
 }
 
-.filter-row.pictograms :global(.bx--search) {
+.filter-row.pictograms :global(.cds--search) {
   @include breakpoint('lg') {
     width: calc(75% + 1px);
   }
@@ -52,7 +52,7 @@
   background: #f3f3f3;
 }
 
-.filter-row :global(.bx--search-input) {
+.filter-row :global(.cds--search-input) {
   border-bottom: 1px solid $ui-03;
   font-size: 1rem;
   line-height: inherit;
@@ -61,7 +61,7 @@
   }
 }
 
-.filter-row :global(.bx--dropdown__wrapper) {
+.filter-row :global(.cds--dropdown__wrapper) {
   flex-grow: 1;
   width: 100%;
   @include breakpoint('md') {
@@ -112,7 +112,7 @@ $svg-card-border: 1px solid $ui-03;
 .svg-card {
   height: 0;
   padding-top: 100%;
-  background-color: $ui-01;
+  background-color: $layer-01;
   position: relative;
   border-left: $svg-card-border;
   border-top: $svg-card-border;
