--- a/src/components/TypeWeight/type-weight.scss
+++ b/src/components/TypeWeight/type-weight.scss
@@ -10,19 +10,19 @@
     color: $text-01;
   }
 
-  .bx--type-italic {
+  .cds--type-italic {
     font-style: italic;
   }
 
-  .bx--type-semibold {
+  .cds--type-semibold {
     font-weight: 600;
   }
 
-  .bx--type-regular {
+  .cds--type-regular {
     font-weight: 400;
   }
 
-  .bx--type-light {
+  .cds--type-light {
     font-weight: 300;
   }
 }
