--- a/src/components/TypesetStyle/typeset-example.scss
+++ b/src/components/TypesetStyle/typeset-example.scss
@@ -1,18 +1,21 @@
-@import '~carbon-components/scss/components/copy-button/copy-button';
+@use '@carbon/react/scss/breakpoint' as *;
+@use '@carbon/react/scss/spacing' as *;
+@use '@carbon/react/scss/colors' as *;
+@use '@carbon/react/scss/components/copy-button' as *;
 
-.bx--copy-btn {
+.cds--copy-btn {
   background-color: var(--cds-layer);
 }
 
-.bx--copy-btn:hover {
+.cds--copy-btn:hover {
   background-color: var(--cds-layer-hover);
 }
 
-.bx--typeset-example-container {
+.cds--typeset-example-container {
   margin-top: $spacing-05;
 }
 
-.bx--typeset-example {
+.cds--typeset-example {
   margin-top: $spacing-05;
   margin-left: -$spacing-03;
   margin-right: -$spacing-03;
@@ -23,17 +26,17 @@
   }
 }
 
-.bx--typeset-example-row {
+.cds--typeset-example-row {
   background-color: $white-0;
   min-height: rem(216px);
 }
 
-.bx--typeset-example-group-title {
+.cds--typeset-example-group-title {
   background-color: $gray-20;
   height: 4rem;
 }
 
-.bx--typeset-example-description {
+.cds--typeset-example-description {
   padding: $spacing-05;
   overflow: hidden;
 
@@ -47,7 +50,7 @@
   }
 }
 
-.bx--typeset-example-specs {
+.cds--typeset-example-specs {
   padding: $spacing-05 $spacing-06;
 
   @include breakpoint('md') {
@@ -56,11 +59,11 @@
   }
 }
 
-.bx--typeset-example-specs-text {
+.cds--typeset-example-specs-text {
   margin-bottom: $spacing-03;
 }
 
-.bx--typeset-example-code-style {
+.cds--typeset-example-code-style {
   display: block;
   margin-top: $spacing-03;
 }
