--- a/src/styles/_images.scss
+++ b/src/styles/_images.scss
@@ -6,9 +6,9 @@
 }
 
 // Removes white background from images inside cards/icons
-.bx--resource-card .gatsby-resp-image-wrapper,
-.bx--resource-card img[src*='gif'],
-.bx--resource-card img[src*='svg'] {
+.cds--resource-card .gatsby-resp-image-wrapper,
+.cds--resource-card img[src*='gif'],
+.cds--resource-card img[src*='svg'] {
   background: transparent;
 }
 
@@ -17,11 +17,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: $ui-01;
+  background: $layer-01;
 }
 
 .image--fixed span.gatsby-resp-image-wrapper {
-  background: $ui-01;
+  background: $layer-01;
   display: flex !important;
   align-items: center;
   justify-content: center;
