fix: dropdown sizing, color tokens, z-index

--- a/src/components/ColorTokenTable/color-token-table.scss
+++ b/src/components/ColorTokenTable/color-token-table.scss
@@ -30,7 +30,7 @@
   left: 0;
   width: 100%;
   height: 64px;
-  background: $ui-background;
+  background: $background;
 }
 
 .color-token-table__theme-switcher--stuck {
