--- a/src/components/ComponentDemo/Code/Code.module.scss
+++ b/src/components/ComponentDemo/Code/Code.module.scss
@@ -29,7 +29,10 @@
   }
   &::before,
   &::after {
-    z-index: z('floating');
+    // TODO - use the z-index helper again once it's exported through
+    // @carbon/react and included in gatsby-theme-carbon resources
+    // z-index: z('floating');
+    z-index: 6000;
   }
 }
 
