--- a/src/components/ComponentDemo/ComponentDemo.module.scss
+++ b/src/components/ComponentDemo/ComponentDemo.module.scss
@@ -11,7 +11,7 @@
     right: 0;
     height: 100%;
     width: 100%;
-    background: $ui-background;
+    background: $background;
     padding: 1rem 2rem;
     overflow: hidden;
   }
@@ -278,8 +278,8 @@ fieldset.form-group:last-of-type {
   grid-area: preview;
   overflow: auto;
   padding: $spacing-05;
-  border: $spacing-03 solid $layer-01;
-  background-color: var(--cds-ui-background);
+  border: $spacing-03 solid $background;
+  background-color: var(--cds-background);
   width: 100%;
   display: flex;
   justify-content: center;
