--- a/src/components/SVGLibraries/shared/SvgLibrary.module.scss
+++ b/src/components/SVGLibraries/shared/SvgLibrary.module.scss
@@ -11,7 +11,10 @@
   flex-direction: column;
   align-items: center;
   position: sticky;
-  z-index: z('dropdown');
+  // TODO - use the z-index helper again once it's exported through
+  // @carbon/react and included in gatsby-theme-carbon resources
+  // z-index: z('dropdown');
+  z-index: 9100;
   top: 7rem;
   border-bottom: 1px solid $ui-03;
   transition: box-shadow $duration-fast-02 ease;
@@ -45,7 +48,10 @@
 .filter-row::before {
   content: '';
   position: absolute;
-  z-index: z('dropdown');
+  // TODO - use the z-index helper again once it's exported through
+  // @carbon/react and included in gatsby-theme-carbon resources
+  // z-index: z('dropdown');
+  z-index: 9100;
   height: 1rem;
   width: 100%;
   top: -1rem;
