--- a/src/styles/_structured-list.scss
+++ b/src/styles/_structured-list.scss
@@ -13,7 +13,7 @@
 }
 
 .cds--row > * > .cds--structured-list .cds--structured-list-row--header-row {
-  background: $ui-background;
+  background: $background;
   border-bottom: none;
 }
 
