--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,7 @@ $flex-grid-columns: 12;
 @import 'structured-list';
 @import 'plex-serif';
 @import 'meetups';
+@import 'tooltip';
 
 @import 'src/components/ColorBlock/color-block.scss';
 @import 'src/components/ColorGrid/color-grid.scss';
