--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -90,3 +90,22 @@ section[role='tabpanel'] [class*='--col'] + [class*='--col'] {
 .tab--columns_label {
   margin-bottom: 0.5rem;
 }
+
+//---------------------------------------
+// Tooltip
+//---------------------------------------
+
+.tooltip-trigger {
+  @include button-reset.reset();
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 2rem;
+  height: 2rem;
+  border: 1px solid;
+}
+
+.tooltip-trigger svg {
+  fill: theme.$background-inverse;
+}
