fix(componentdemo): dropdown styles fixes for v11

--- a/src/components/ComponentDemo/ComponentDemo.module.scss
+++ b/src/components/ComponentDemo/ComponentDemo.module.scss
@@ -235,7 +235,7 @@ fieldset.form-group:last-of-type {
   border-bottom: 0;
 }
 
-.dropdownRow {
+.cds--row.dropdownRow {
   margin-right: 14rem;
   @include breakpoint-down('md') {
     margin-right: -1rem;
@@ -264,7 +264,7 @@ fieldset.form-group:last-of-type {
   }
 }
 
-.dropdownRow .variantDropdown {
+.dropdownRow .variantDropdown .cds--dropdown {
   border-left: 1px solid $ui-03;
 }
 
@@ -407,7 +407,7 @@ body[data-live-preview-theme='Gray 100']
   }
 
   [class*='--search--sm'],
-  [class*='--search--lg'],
+  [class*='--search--md'],
   [class*='--search--xl'],
   .cds--select {
     width: 50%;
