chore(deps): update to 10.56.0 Carbon and latest gatsby theme prerelease for v11

--- a/src/styles/_grid-demo.scss
+++ b/src/styles/_grid-demo.scss
@@ -1,4 +1,4 @@
-@use '@carbon/react/scss/grid' as *;
+@use '@carbon/grid/scss/modules/flex-grid' as *;
 @use '@carbon/react/scss/breakpoint' as *;
 @use '@carbon/react/scss/compat/theme' as *;
 @use '@carbon/react/scss/colors' as *;
@@ -8,24 +8,49 @@
 //---------------------------------------
 // Set 16 column grid for examples only
 //---------------------------------------
-.grid-demo {
-  $prefix: 'bx-demo';
-  $feature-flags: (
-    grid-columns-16: true,
-  );
+.grid-demo.override.override {
+  // $prefix: 'cds';
 
-  @include flex-grid();
+  $grid-breakpoints: (
+    sm: (
+      columns: 4,
+      margin: 0,
+      width: rem(320px),
+    ),
+    md: (
+      columns: 8,
+      margin: rem(16px),
+      width: rem(672px),
+    ),
+    lg: (
+      columns: 16,
+      margin: rem(16px),
+      width: rem(1056px),
+    ),
+    xlg: (
+      columns: 16,
+      margin: rem(16px),
+      width: rem(1312px),
+    ),
+    max: (
+      columns: 16,
+      margin: rem(24px),
+      width: rem(1584px),
+    ),
+  ) !default;
+
+  @include flex-grid($grid-breakpoints);
   // @import '~carbon-components/scss/globals/grid/grid';
   // @import '~carbon-components/scss/globals/scss/layout';
 }
 
-.bx-demo-sm {
+.cds-sm {
   @include breakpoint('md') {
     display: none;
   }
 }
 
-.bx-demo-md {
+.cds-md {
   display: none;
 
   @include breakpoint('md') {
@@ -37,7 +62,7 @@
   }
 }
 
-.bx-demo-lg {
+.cds-lg {
   display: none;
 
   @include breakpoint('lg') {
@@ -73,7 +98,7 @@
   position: relative;
 }
 
-.grid-demo .bx-demo--grid {
+.grid-demo .cds--grid {
   margin: 0;
   flex-grow: 1;
   padding-left: $spacing-07;
@@ -126,7 +151,7 @@
   padding-top: $spacing-05;
 }
 
-.grid-demo--bleed .bx-demo--grid {
+.grid-demo--bleed .cds--grid {
   background-color: $blue-30;
   padding-top: 0;
   padding-bottom: 0;
@@ -145,11 +170,11 @@
   padding-bottom: $spacing-05;
 }
 
-.aspect-ratio-demo .bx-demo--grid {
+.aspect-ratio-demo .cds--grid {
   margin-top: $spacing-05;
 }
 
-.aspect-ratio-demo .bx-demo--grid:first-child {
+.aspect-ratio-demo .cds--grid:first-child {
   margin-top: 0;
 }
 
@@ -160,7 +185,7 @@
 //---------------------------------------
 // Shell collapsed/expanded
 //---------------------------------------
-.grid-demo .side-nav + .bx-demo--grid {
+.grid-demo .side-nav + .cds--grid {
   @include breakpoint('md') {
     padding-left: $spacing-05;
   }
@@ -209,18 +234,18 @@
 // grid code that isn't being pulled in
 // with the updated prefix ❓❓❓❓
 //---------------------------------------
-.bx-demo--grid--condensed .bx-demo--row:not(:last-of-type) {
+.cds--grid--condensed .cds--row:not(:last-of-type) {
   margin-bottom: 0.125rem;
 }
 
-.bx-demo--grid--condensed .bx-demo--col,
-.bx-demo--row--condensed .bx-demo--col {
+.cds--grid--condensed .cds--col,
+.cds--row--condensed .cds--col {
   padding-right: 0.0625rem;
   padding-left: 0.0625rem;
 }
 
-.bx-demo--grid--narrow .bx-demo--col,
-.bx-demo--row--narrow .bx-demo--col {
+.cds--grid--narrow .cds--col,
+.cds--row--narrow .cds--col {
   padding-left: 0;
 }
 
