fix(homepage): bring homepage tile to front

--- a/src/styles/_homepage.scss
+++ b/src/styles/_homepage.scss
@@ -40,7 +40,7 @@
 }
 
 // homepage tile at top
-.homepage--tile-header {
+.homepage--tile-header[class*='cds--col'] {
   display: flex;
   align-items: flex-end;
   margin-top: -50%;
