fix(website): icon page, code blocks fixes

--- a/src/components/SVGLibraries/shared/SvgLibrary.module.scss
+++ b/src/components/SVGLibraries/shared/SvgLibrary.module.scss
@@ -39,6 +39,10 @@
   }
 }
 
+.filter-row :global(.cds--dropdown) {
+  border-bottom: none;
+}
+
 .filter-row.pictograms :global(.cds--search) {
   @include breakpoint('lg') {
     width: calc(75% + 1px);
