fix(dropdowns): visual style fixes

--- a/src/components/ComponentDemo/ComponentDemo.module.scss
+++ b/src/components/ComponentDemo/ComponentDemo.module.scss
@@ -235,7 +235,7 @@ fieldset.form-group:last-of-type {
   border-bottom: 0;
 }
 
-.cds--row.dropdownRow {
+.dropdownRow {
   margin-right: 14rem;
   @include breakpoint-down('md') {
     margin-right: -1rem;
@@ -264,8 +264,10 @@ fieldset.form-group:last-of-type {
   }
 }
 
-.dropdownRow .variantDropdown .cds--dropdown {
-  border-left: 1px solid $ui-03;
+.dropdownRow .variantDropdown :global {
+  [class*='--dropdown'] {
+    border-left: 1px solid $ui-03;
+  }
 }
 
 .hiddenDropdown {
