fix(dropdowns): use correct v11 `size` prop (#2820)
* fix(dropdowns): use correct v11 size

* fix(componentdemo): dropdown styles fixes for v11

* fix(colorpalette): use proper dropdown size

* fix(dropdowns): visual style fixes

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/components/ComponentDemo/ComponentDemo.module.scss
+++ b/src/components/ComponentDemo/ComponentDemo.module.scss
@@ -264,8 +264,10 @@ fieldset.form-group:last-of-type {
   }
 }
 
-.dropdownRow .variantDropdown {
-  border-left: 1px solid $ui-03;
+.dropdownRow .variantDropdown :global {
+  [class*='--dropdown'] {
+    border-left: 1px solid $ui-03;
+  }
 }
 
 .hiddenDropdown {
@@ -407,7 +409,7 @@ body[data-live-preview-theme='Gray 100']
   }
 
   [class*='--search--sm'],
-  [class*='--search--lg'],
+  [class*='--search--md'],
   [class*='--search--xl'],
   .cds--select {
     width: 50%;
