fix(styles): update caption-01 usage

--- a/src/components/TypeScaleTable/type-scale-table.scss
+++ b/src/components/TypeScaleTable/type-scale-table.scss
@@ -25,7 +25,7 @@ $type-scale: 0.75rem, 0.875rem, 1rem, 1.125rem, 1.25rem, 1.5rem, 1.75rem, 2rem,
   }
 
   table thead th {
-    @include type-style('caption-01');
+    @include type-style('label-01');
     border: none;
     color: $text-02;
     padding: $spacing-05 0;
