--- a/src/styles/_grid-demo.scss
+++ b/src/styles/_grid-demo.scss
@@ -106,7 +106,7 @@
 }
 
 .grid-demo [class*='col'] {
-  @include type-style('caption-01');
+  @include type-style('label-01');
   padding-top: $spacing-05;
   min-height: 4rem;
   background-color: $blue-10;
