--- a/src/components/ComponentOverview/component-overview.scss
+++ b/src/components/ComponentOverview/component-overview.scss
@@ -111,7 +111,7 @@ $hover-ui: #e5e5e5;
 }
 
 .component-name {
-  @include type-style('caption-01');
+  @include type-style('label-01');
   color: $text-01;
   text-decoration: none;
   text-align: left;
