--- a/src/components/OverviewCard/overview-card.scss
+++ b/src/components/OverviewCard/overview-card.scss
@@ -29,7 +29,7 @@
 }
 
 .overview-card__title {
-  @include type-style('caption-01');
+  @include type-style('label-01');
   text-decoration: none;
   color: $text-01;
   position: relative;
