fix(component-index): ensure tags have no background

--- a/src/components/ComponentIndexPage/component-index.scss
+++ b/src/components/ComponentIndexPage/component-index.scss
@@ -169,6 +169,9 @@
     color: $text-01;
   }
 }
+.component-index-item__tag--maintainer span.cds--tooltip {
+  background: none;
+}
 
 //----------------------------------------------------------------------------
 // Component Index Not Found
