chore(project): final v11 updates

--- a/src/styles/_homepage.scss
+++ b/src/styles/_homepage.scss
@@ -18,19 +18,32 @@
 }
 
 .homepage--header {
-  height: 0;
+  height: 500px;
   overflow: hidden;
-  padding-top: 100%;
+  padding-top: 0;
   position: relative;
 
-  @include breakpoint('md') {
-    padding-top: 50%;
-  }
+  // @include breakpoint('lg') {
+  //   padding-top: 50%;
+  // }
 
   // Match max height at lg breakpoint
   @include breakpoint('lg') {
     padding: 0;
     height: 560px;
+  }
+}
+
+.homepage--header .cds--grid {
+  background-size: cover;
+  background-position: center;
+  height: 50vh;
+  max-height: 560px;
+  width: 100%;
+  max-width: 100%;
+
+  @include breakpoint('lg') {
+    background-position: 100px center;
   }
 }
 
