add homepage hero animation

--- a/src/styles/_homepage.scss
+++ b/src/styles/_homepage.scss
@@ -43,7 +43,9 @@
   max-width: 100%;
 
   @include breakpoint('lg') {
-    background-position: 100px center;
+    svg.hero-svg {
+      left: 100px !important;
+    }
   }
 }
 
