fix(livedemo): use static token for preview border

--- a/src/components/ComponentDemo/ComponentDemo.module.scss
+++ b/src/components/ComponentDemo/ComponentDemo.module.scss
@@ -280,8 +280,7 @@ fieldset.form-group:last-of-type {
   grid-area: preview;
   overflow: auto;
   padding: $spacing-05;
-  border: $spacing-03 solid $background;
-  border-left: 1px solid $ui-03;
+  border: $spacing-03 solid $white;
   background-color: var(--cds-background);
   width: 100%;
   display: flex;
